@@ -38,7 +38,7 @@ error status. For tasks, success means the task proxy is currently in
 the 'running' state.""",
     pyro=True,
     argdoc=[('REG', 'Suite name'), 
-            ('[TASK]', 'Task NAME%TAG (TAG is cycle time or "a:INT")')])
+            ('[TASK]', 'Task NAME%TAG (TAG is cycle time or integer)')])
 
 parser.add_option( "--print-ports",
         help="Print cylc's configured port range.",
