@@ -887,3 +887,6 @@ users often forget which task states are filtered out.
 is not enough to contstrain a single task cycling suite, in which
 successive instances all go off at once).
 
++ Removed the requirement to preface the integer TAG of an asynchronous
+task, on the command line, with 'a:'.
+
